2023-03-09 Conner Clere <xenanthropy@sourcemage.org>
	* BUILD: added, modified meson_build; change to `--shared-library static`
	  (only applies if system wlroots not used)
	* INSTALL: added, modified meson_install; add `--tags runtime,man`
	* PRE_BUILD: update wlroots git clone to checkout appropriate wlroots commit
	* DEPENDS: fix wlroots dep, remove hard dep line and add sub_depends to
	  wlroots optional_depends

2023-03-08 Conner Clere <xenanthropy@sourcemage.org>
	* DETAILS: version 0.22.0
	* DEPENDS: change wlroots dep to -sub SCM HYPRLAND

2023-02-01 Conner Clere <xenanthropy@sourcemage.org>
	* DEPENDS, PRE_BUILD, HISTORY: add missing newlines at end
	* DEPENDS, PRE_BUILD: fix is_depends_enabled statements

2023-01-31 Conner Clere <xenanthropy@sourcemage.org>
	* CONFIGURE, DEPENDS, PRE_BUILD, DETAILS: version 0.21.0, new spell
	* patches/hyprland-system-wlroots.patch: add support for system wlroots
