@@ -11,26 +11,7 @@ depends cairo                       &&
 depends pixman                      &&
 depends OPENGL                      &&
 depends seatd                       &&
-
-optional_depends -sub "SCM HYPRLAND" wlroots         \
-                 'use_system_wlroots=enabled'        \
-                 'use_system_wlroots=disabled'       \
-                 'Use system wlroots? (Recommended)' &&
-
-# If no system wlroots, we need to depend on wlroots' deps
-# so wlroots subproject will build
-if ! is_depends_enabled $SPELL wlroots; then
-  depends python3         &&
-  depends DEVICE-MANAGER  &&
-  depends xcb-util-errors &&
-  depends libdrm          &&
-  depends hwdata          &&
-  optional_depends vulkan-headers '' '' 'Build Vulkan renderer?' &&
-  if is_depends_enabled $SPELL vulkan-headers; then
-    depends vulkan-loader &&
-    depends glslang
-  fi
-fi &&
+depends -sub "SCM" wlroots 'use_system_wlroots=enabled' &&
 
 optional_depends xwayland                            \
                  'xwayland=enabled'                  \
