@@ -1,10 +1,16 @@
 . "$GRIMOIRE/MESON_FUNCTIONS"
            SPELL=hyprland
-         VERSION=0.22.0
+         VERSION=0.23.0
+     SOURCE_HASH=sha256:a866dc48d2c7fad6f9a57e890430a8c234ea9f8fcada6c6eafb95eaadadb1ab0
           SOURCE=Hyprland-${VERSION}beta.tar.gz
    SOURCE_URL[0]=https://github.com/hyprwm/${SPELL}/archive/v${VERSION}beta.tar.gz
-     SOURCE_HASH=sha256:dd721975b15126a8165226d5ab2cbb88c5bd48dd768b6ee123149451af2fb0c1
 SOURCE_DIRECTORY="$BUILD_DIRECTORY/Hyprland-${VERSION}beta"
+         SOURCE2="${SPELL}-protocols-scm.tar.xz"
+  SOURCE2_URL[0]="git_http://github.com/hyprwm/${SPELL}-protocols:${SPELL}-protocols-scm:main"
+  SOURCE2_IGNORE="volatile"
+         SOURCE3="udis86-scm.tar.xz"
+  SOURCE3_URL[0]="git_http://github.com/canihavesomecoffee/udis86:udis86-scm"
+  SOURCE3_IGNORE="volatile"
         WEB_SITE=http://www.hyprland.org/
          ENTERED=20230123
       LICENSE[0]=BSD
