@@ -1,16 +1,0 @@
-local MESON_INSTALL &&
-local MESON_OPTS &&
-
-if [[ $(get_spell_provider ${SPELL} MESON-BUILD) == muon ]]; then
-  MESON_INSTALL="muon"
-
-  MESON_OPTS="-C builddir/ install"
-else
-  MESON_INSTALL="meson"
-
-  MESON_OPTS="install -C builddir/ --no-rebuild --tags runtime,man"
-fi &&
-
-cd "${SOURCE_DIRECTORY}" &&
-
-DESTDIR="${INSTALL_ROOT}/" ${MESON_INSTALL} ${MESON_OPTS}
