@@ -3,11 +3,8 @@ cd "${SOURCE_DIRECTORY}" &&
 apply_patch_dir patches &&
 
 cd "${SOURCE_DIRECTORY}/subprojects" &&
-git clone https://github.com/hyprwm/hyprland-protocols.git ./hyprland-protocols &&
-
-# Clones wlroots repo if you aren't using system wlroots
-if ! is_depends_enabled $SPELL wlroots; then
-  git clone https://gitlab.freedesktop.org/wlroots/wlroots.git ./wlroots &&
-  cd "${SOURCE_DIRECTORY}/subprojects/wlroots/" &&
-  git checkout 677a3f2f8847ed2de49dd60868f9d9487a546f58
-fi
+unpack_file 2 &&
+unpack_file 3 &&
+rm -rf "${SPELL}-protocols" "udis86" &&
+mv "${SPELL}-protocols-scm" "./${SPELL}-protocols" &&
+mv udis86-scm ./udis86
