@@ -1,8 +1,8 @@
 diff --git a/meson.build b/meson.build
-index 9435333..21afe36 100644
+index f380255..0b43fc2 100644
 --- a/meson.build
 +++ b/meson.build
-@@ -37,17 +37,28 @@ add_project_arguments(
+@@ -39,8 +39,19 @@ add_project_arguments(
    ],
    language: 'cpp')
  
@@ -23,17 +23,7 @@ index 9435333..21afe36 100644
 +
  xcb_dep = dependency('xcb', required: get_option('xwayland'))
  
- if get_option('xwayland').enabled() and not have_xwlr
- 	error('Cannot enable Xwayland in Hyprland: wlroots has been built without Xwayland support')
- endif
- have_xwayland = xcb_dep.found() and have_xwlr
- 
- if not have_xwayland
--add_project_arguments('-DNO_XWAYLAND', language: 'cpp')
-+	add_project_arguments('-DNO_XWAYLAND', language: 'cpp')
- endif
- 
- if get_option('buildtype') == 'debug'
+ cmake = import('cmake')
 diff --git a/meson_options.txt b/meson_options.txt
 index d34c617..adf708f 100644
 --- a/meson_options.txt
