@@ -1,3 +1,13 @@
+2023-03-20 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS: version 0.23.0, added hyprland-protocols and udis86 as subprojects
+	  to download
+	* BUILD, INSTALL: removed, not needed anymore
+	* DEPENDS: wlroots scm branch is required now, removed extra dependencies
+	  for builtin wlroots
+	* PRE_BUILD: removed git cloning of hyprland-protocols and wlroots,
+	  unpacking and renaming subprojects directories is refactored as well
+	* patches/hyprland-system-wlroots.patch: updated
+
 2023-03-09 Conner Clere <xenanthropy@sourcemage.org>
 	* BUILD: added, modified meson_build; change to `--shared-library static`
 	  (only applies if system wlroots not used)
